Ingress/delegation-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: synapse-delegation-nginx
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, HEAD, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Origin, X-Requested-With, Content-Type, Accept, Authorization"
spec:
  rules:
    - host: dv.techsmart.space
      http:
        paths:
          - path: /.well-known/matrix/
            pathType: Prefix
            backend:
              service:
                name: delegation-service
                port:
                  number: 80
  tls:
    - hosts:
        - dv.techsmart.space
      secretName: dv.techsmart.space
