Ingress/synapse-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 100M
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: matrix.techsmart.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: synapse-service
                port:
                  number: 8008
  tls:
    - hosts:
        - matrix.techsmart.space
      secretName: techsmart.space
